--- a/bootstrapform/templates/bootstrapform/field.html
+++ b/bootstrapform/templates/bootstrapform/field.html
@@ -20,7 +20,7 @@
                 {% endif %}
             </div>
         </div>
-    {% elif field|is_radio %}
+      {% else %} {% if field|is_radio %}
         {% if field.auto_id %}
             <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
         {% endif %}
@@ -44,6 +44,7 @@
             </p>
             {% endif %}
         </div>
+        {% endif %}
     {% else %}
         {% if field.auto_id %}
             <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
